--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.3"
+    "@astrojs/mdx": "^4.3.0",
+    "astro": "^5.9.3",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0"
   }
 }
